--- a/scss/app.scss
+++ b/scss/app.scss
@@ -1,4 +1,64 @@
+// Layout/Grid
+$base-breakpoint: 768px;
+$layout-width: 1200px;
+$spacing: 60px; // $grid-gutter-width;
+
+// Colors
+$primary-color: red;
+$accent-color: blue;
+
+// Fonts
+$body-font: Tahoma, Geneva, sans-serif;
+$heading-font: Georgia, serif;
+
+// Imports
+@import "bootstrap_grid/bootstrap"; // Comment out if you want. This is just the bootstrap grid.
+@import "mixins";
+@import "normalize";
+@import "helpers";
+@import "forms";
+
+*, *:before, *:after {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+html {
+	min-height: 100%;
+	position: relative;
+}
+
 body {
+	font-family: $body-font;
+	font-size: 16px;
 	color: #222;
-	background-color: #eee;
+	overflow-y: scroll;
+	background-color: #fafafa;
+	line-height: 1.5;
+}
+
+a {
+	text-decoration: none;
+	color: $primary-color;
+	&:hover, 
+	&:focus { 
+		color: lighten( $primary-color, 10% );
+	}
+}
+
+h1,h2,h3,h4,h5,h6{
+	
+	font-family: $heading-font;
+	line-height: 1.5;
+	margin-bottom: 10px;
+	margin-top: 0;
+	-ms-word-wrap: break-word;
+	word-wrap: break-word;
+	
+}
+
+img {
+	max-width: 100%;
+	height: auto;
 }
